Fix mailing list spacing

--- a/css/original.css
+++ b/css/original.css
@@ -1406,6 +1406,7 @@ background-size: 1800% 1800%;
     z-index: 60000;
 		color: #fefefe;
 		min-width: 250px;
+    width: 200%;
 		max-width: 700px;
 		background-image: linear-gradient(130deg, #EBF9F3, #CA7C83, #D099D5,  #C7E3F0, #C3BDF1);
 background-size: 1800% 1800%;
